cmake_minimum_required(VERSION 2.8)
include_directories(.)

add_executable(assert samples/assert.cpp)
add_executable(smart_ptr samples/smart_ptr.cpp)
add_executable(tuple samples/tuple.cpp)
add_executable(for_each samples/for_each.cpp)
add_executable(string_algorithm samples/string_algorithm.cpp)
add_executable(unordered samples/unordered.cpp)
add_executable(filesystem samples/filesystem.cpp)
add_executable(mutex samples/mutex.cpp)
add_executable(regex samples/regex.cpp)
add_executable(conversion samples/conversion.cpp)
add_executable(ratio samples/ratio.cpp)
add_executable(chrono samples/chrono.cpp)
add_executable(array samples/array.cpp)
add_executable(sample13 samples/sample13.cpp)
